# paper-analysis-agent

./: .gitignore  CLAUDE.md  DELIVERY.md  FINAL_DELIVERY.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  README.md  RPD.md  WECHAT_INTEGRATION_SUMMARY.md  WECHAT_SETUP.md  WECHAT_UPDATE.md  demo_wechat.py  deploy.bat  deploy.sh  doclist_debug.json  findings.md  findings_interview.md  findings_kb.md  findings_rag_deep_dive.md  findings_rag_skill_analysis.md  findings_wechat.md  findings_wechat_studio.md  fix_emojis.py  linux_deploy.md  main.py  progress.md  progress_wechat.md  progress_wechat_studio.md  pyproject.toml  start.bat  start.sh  task_plan.md  task_plan_interview.md  task_plan_kb.md  task_plan_rag.md  task_plan_summary.md  task_plan_upload_test.md  task_plan_wechat.md  task_plan_wechat_studio.md  test_add_kb.py  (+19 more)
demos/: README.md  demo_module_01_core.py  demo_module_02_data.py  demo_module_03_orchestrator.py  demo_module_04_autogen.py  run_demos.py
output/wechat/: Transformer 架构的理论瓶颈与演进路线：基于计算复杂度与算法信息论的深度调研报告.html  demo_business.html  demo_minimal.html  demo_tech.html  test_article.html  多智能体强化学习演进脉络与前沿技术调研报告.html  扩散模型鲁棒性研究：脆弱性机理、防御策略与未来范式.html  跨域科学中的数学结构优化：从粒子物理对称性到核衰变机制的范式转移调研报告.html
src/agents/: analyse_agent.py  orchestrator.py  reading_agent.py  search_agent.py  userproxy_agent.py  writing_agent.py
src/core/: config.py  model_client.py  models.yaml  prompts.py  state_models.py  system_params.yaml
src/knowledge/: knowledge_router.py
src/nodes/: __init__.py  analyse.py  (+4 more)
web/: index.html  package.json  vite.config.js
wechat_article_skills/: README.md
(+39 files in other folders)
